--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -3,6 +3,6 @@ contact_links:
   - name: Contact our Business Team
     url: https://www.streamx.dev/contact-us.html?utm_source=github&utm_medium=issue&utm_campaign=streamx-examples
     about: Reach out to our business team for inquiries about StreamX, partnerships, or other opportunities.
-  - name: Book a Demo
+  - name: Request a Demo
     url: https://www.streamx.dev/book-a-demo.html?utm_source=github&utm_medium=issue&utm_campaign=streamx-examples
     about: Request your demo now to see how StreamX can transform your digital experience!
