[DXP-1490] Added support for operator deployments

--- a/configs/aggregator.properties
+++ b/configs/aggregator.properties
@@ -1,5 +1,5 @@
-streamx.blueprints.json-aggregator-processing-service.configurations[0].master-type=pim
-streamx.blueprints.json-aggregator-processing-service.configurations[0].optional-types=price,reviews
-streamx.blueprints.json-aggregator-processing-service.configurations[0].output-type=product
-streamx.blueprints.json-aggregator-processing-service.configurations[1].master-type=review
-streamx.blueprints.json-aggregator-processing-service.configurations[1].output-type=reviews
+streamx_blueprints_json-aggregator-processing-service_configurations_0__master-type=pim
+streamx_blueprints_json-aggregator-processing-service_configurations_0__optional-types=price,reviews
+streamx_blueprints_json-aggregator-processing-service_configurations_0__output-type=product
+streamx_blueprints_json-aggregator-processing-service_configurations_1__master-type=review
+streamx_blueprints_json-aggregator-processing-service_configurations_1__output-type=reviews
