--- a/mesh.yaml
+++ b/mesh.yaml
@@ -191,11 +191,12 @@ delivery:
     environment:
       STREAMX_BLUEPRINTS_WEB-DELIVERY-SERVICE_RESOURCES_DIRECTORY: "/srv/www"
     repositoryVolume: "/srv/www"
+    port: 8083
     components:
       webserver:
         image: "docker.io/library/nginx:1.26.0"
         ports:
-          - "80"
+          - 8084:80
         repositoryVolume: "/usr/share/nginx/html"
         volumesFrom:
           configs:
