[DXP-1490] Added support for Kubernetes deployments

--- a/configs/ingestion.properties
+++ b/configs/ingestion.properties
@@ -1,5 +1,5 @@
 # disable authentication for local run
-quarkus.http.auth.permission.bearer.policy=permit
+QUARKUS_HTTP_AUTH_PERMISSION_BEARER_POLICY=permit
 
 streamx.key-regex-rewrite.channel.pages.patterns.pages.match-pattern=^/published/puresight/pages/(.*)
 streamx.key-regex-rewrite.channel.pages.patterns.pages.rewrite-pattern=/$1
