--- a/scripts/proxy.conf
+++ b/scripts/proxy.conf
@@ -8,12 +8,12 @@ http {
         # Proxy for web server
         server_name puresight.127.0.0.1.nip.io;
         location / {
-            proxy_pass http://host.docker.internal:8084;
+            proxy_pass http://blueprint-web.webserver:80;
         }
 
         # Proxy for search
         location /search {
-            proxy_pass http://host.docker.internal:8082;
+            proxy_pass http://blueprint-search:8080;
         }
     }
 
@@ -23,7 +23,7 @@ http {
         # Proxy for PIM
         server_name pim.127.0.0.1.nip.io;
         location / {
-            proxy_pass http://host.docker.internal:9000;
+            proxy_pass http://streamx-demo-sandbox-pim:8080;
         }
     }
 
@@ -33,7 +33,7 @@ http {
         # Proxy for CMS
         server_name cms.127.0.0.1.nip.io;
         location / {
-            proxy_pass http://host.docker.internal:9001;
+            proxy_pass http://streamx-demo-sandbox-websight-cms:8080;
         }
     }
 
@@ -41,10 +41,9 @@ http {
         listen 80;
 
         # Proxy for Ingestion API
-        # Adding alias host.docker.internal which is used by the CMS and the PIM
-        server_name ingestion.127.0.0.1.nip.io host.docker.internal;
+        server_name ingestion.127.0.0.1.nip.io;
         location / {
-            proxy_pass http://host.docker.internal:8080;
+            proxy_pass http://rest-ingestion:8080;
         }
     }
 }
